WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83760
[BlackBerry] Sign in cookie for ESPN.com does not retain login account (for fantasy sports).
https://bugs.webkit.org/show_bug.cgi?id=83760
Summary
[BlackBerry] Sign in cookie for ESPN.com does not retain login account (for f...
Jason Liu
Reported
2012-04-12 02:06:50 PDT
Observed Results: *Sign in cookie for ESPN.com does not retain login account (for fantasy sports). Expected Results: * Account should stayed sign in. Steps to Reproduce: * Sign in to espn .com * Close browser * User reopened the browser and noticed that he is no longer signed in.
Attachments
Patch
(4.44 KB, patch)
2012-04-13 00:00 PDT
,
Jason Liu
no flags
Details
Formatted Diff
Diff
Patch
(4.78 KB, patch)
2012-04-13 00:17 PDT
,
Jason Liu
no flags
Details
Formatted Diff
Diff
Patch
(5.00 KB, patch)
2012-04-13 03:05 PDT
,
Jason Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jason Liu
Comment 1
2012-04-13 00:00:11 PDT
Created
attachment 137046
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-13 00:05:19 PDT
Attachment 137046
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'ChangeLog', u'ManualTests/blackberry/http-..." exit_code: 1 Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jason Liu
Comment 3
2012-04-13 00:17:45 PDT
Created
attachment 137050
[details]
Patch
Jason Liu
Comment 4
2012-04-13 03:05:58 PDT
Created
attachment 137068
[details]
Patch
WebKit Review Bot
Comment 5
2012-04-13 06:14:27 PDT
Comment on
attachment 137068
[details]
Patch Clearing flags on attachment: 137068 Committed
r114122
: <
http://trac.webkit.org/changeset/114122
>
WebKit Review Bot
Comment 6
2012-04-13 06:14:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug