[BlackBerry] Sign in cookie for ESPN.com does not retain login account (for fantasy sports). https://bugs.webkit.org/show_bug.cgi?id=83760

Patch by Jason Liu <jason.liu@torchmobile.com.cn> on 2012-04-13
Reviewed by George Staikos.

.:

* ManualTests/blackberry/http-cookie-database-set.php: Added.
* ManualTests/blackberry/http-cookie-database-update.php: Added.

Source/WebCore:

When we update cookies' database, protocol shouldn't be checked since it is not a cookie's key.
ESPN.com's https cookies should replace old http cookies if they have the same keys(name, path, domain).

We must restart the browser to test, so have to write a manual test case.

Test: ManualTests/blackberry/http-cookie-database-set.php

* platform/blackberry/CookieDatabaseBackingStore/CookieDatabaseBackingStore.cpp:
(WebCore::CookieDatabaseBackingStore::invokeOpen):

Canonical link: https://commits.webkit.org/101404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114122 268f45cc-cd09-0410-ab3c-d52691b4dbfc